Fix the breaking CSS on lines that were too long

--- a/nodejs/public/css/chat.css
+++ b/nodejs/public/css/chat.css
@@ -95,6 +95,8 @@ a.try_now{
 .line td{
 	padding-top:0;
 	padding-bottom:.2em;
+	word-break:break-all;
+	word-wrap:break-word;
 }
 
 tr.first {
